Bug 421512 - Visual regression in disk usage applet
Summary: Visual regression in disk usage applet
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: VHI normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-05-14 13:44 UTC by Luca Beltrame
Modified: 2020-07-10 18:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments
Screenshot of default applet (47.14 KB, image/png)
2020-05-14 13:44 UTC, Luca Beltrame
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Beltrame 2020-05-14 13:44:32 UTC
Created attachment 128453 [details]
Screenshot of default applet

SUMMARY

The new system monitor applet with regards to disk usage generates, by default, an applet that is totally unreadable, with many bars and with no clear indication to which bar corresponds to which partition / mountpoint.

Screenshot attached.

STEPS TO REPRODUCE
1. Add "Disk Usage" to desktop

OBSERVED RESULT

Applet with unreadable and thin colored bars

EXPECTED RESULT

An applet similar to the one existing before the rewrite.

SOFTWARE/OS VERSIONS
Plasma from git master (as of 2020-05-14), KF5 from git master (same date) and Qt 5.15 RC.
Comment 1 Nate Graham 2020-05-14 13:46:09 UTC
In fact I notice that all of them seem to come with no legend by default now :/
Comment 2 Marco Martin 2020-07-01 10:50:07 UTC
did the situation improve on current master/latest backports to 5.19?
Comment 3 Bug Janitor Service 2020-07-10 14:37:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/43
Comment 4 Marco Martin 2020-07-10 15:22:38 UTC
Git commit a94e688889842f348211883e2396513372d48c90 by Marco Martin.
Committed on 10/07/2020 at 15:22.
Pushed by mart into branch 'master'.

new face: Horizontal bars

this new face draws horizontal bars with rounded edges (to look kinda
breeze-y) though they are just rounded Rectangles in order to alwys
support correct custom coloring for bars.
Legends are immediately below the bar instead of grouped, which makes it
much more readable in this case.

It looks also pretty similar to the old partitions monitor, effectively
fixing

M  +0    -1    faces/SensorFaceController.cpp
M  +1    -0    faces/facepackages/CMakeLists.txt
A  +2    -0    faces/facepackages/horizontalbars/Messages.sh
A  +5    -0    faces/facepackages/horizontalbars/contents/faceproperties
A  +52   -0    faces/facepackages/horizontalbars/contents/ui/Bar.qml     [License: LGPL (v2+)]
A  +57   -0    faces/facepackages/horizontalbars/contents/ui/CompactRepresentation.qml     [License: LGPL (v2+)]
A  +118  -0    faces/facepackages/horizontalbars/contents/ui/FullRepresentation.qml     [License: LGPL (v2+)]
A  +13   -0    faces/facepackages/horizontalbars/metadata.desktop

https://invent.kde.org/plasma/libksysguard/commit/a94e688889842f348211883e2396513372d48c90