new face: Horizontal bars

this new face draws horizontal bars with rounded edges (to look kinda
breeze-y) though they are just rounded Rectangles in order to alwys
support correct custom coloring for bars.
Legends are immediately below the bar instead of grouped, which makes it
much more readable in this case.

It looks also pretty similar to the old partitions monitor, effectively
fixing
BUG:421512