faces/facepackages/horizontalbars/contents/ui/Bar.qml
@@ -1,0 +1,52 @@
+/*
+ *   Copyright 2020 Marco Martin <mart@kde.org>
+ *   Copyright 2019 David Edmundson <davidedmundson@kde.org>
+ *   Copyright 2019 Arjen Hiemstra <ahiemstra@heimr.nl>
+ *
+ *   This program is free software; you can redistribute it and/or modify
+ *   it under the terms of the GNU Library General Public License as
+ *   published by the Free Software Foundation; either version 2, or
+ *   (at your option) any later version.
+ *
+ *   This program is distributed in the hope that it will be useful,
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *   GNU General Public License for more details
+ *
+ *   You should have received a copy of the GNU Library General Public
+ *   License along with this program; if not, write to the
+ *   Free Software Foundation, Inc.,
+ *   51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+ */
+
+import QtQuick 2.9
+import QtQuick.Layouts 1.1
+
+import org.kde.kirigami 2.13 as Kirigami
+
+import org.kde.ksysguard.sensors 1.0 as Sensors
+import org.kde.ksysguard.faces 1.0 as Faces
+
+import org.kde.quickcharts 1.0 as Charts
+import org.kde.quickcharts.controls 1.0 as ChartsControls
+
+Rectangle {
+    id: bar
+    Layout.fillWidth: true
+    implicitHeight: Math.round(Kirigami.Units.gridUnit / 3)
+    color: Kirigami.ColorUtils.adjustColor(Kirigami.Theme.textColor, {"alpha": 40})
+    radius: height/2
+    property Sensors.Sensor sensor
+
+    Rectangle {
+        anchors {
+            left: parent.left
+            top: parent.top
+            bottom: parent.bottom
+        }
+        color: root.colorSource.map[modelData]
+        radius: height/2
+        width: Math.min(Math.max(height, parent.width * (bar.sensor.value / bar.sensor.maximum)), parent.width)
+    }
+}
+
