faces/facepackages/horizontalbars/contents/ui/FullRepresentation.qml
@@ -1,0 +1,118 @@
+/*
+ *   Copyright 2019 Marco Martin <mart@kde.org>
+ *   Copyright 2019 David Edmundson <davidedmundson@kde.org>
+ *   Copyright 2019 Arjen Hiemstra <ahiemstra@heimr.nl>
+ *
+ *   This program is free software; you can redistribute it and/or modify
+ *   it under the terms of the GNU Library General Public License as
+ *   published by the Free Software Foundation; either version 2, or
+ *   (at your option) any later version.
+ *
+ *   This program is distributed in the hope that it will be useful,
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *   GNU General Public License for more details
+ *
+ *   You should have received a copy of the GNU Library General Public
+ *   License along with this program; if not, write to the
+ *   Free Software Foundation, Inc.,
+ *   51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+ */
+
+import QtQuick 2.9
+import QtQuick.Layouts 1.1
+
+import org.kde.kirigami 2.13 as Kirigami
+
+import org.kde.ksysguard.sensors 1.0 as Sensors
+import org.kde.ksysguard.faces 1.0 as Faces
+
+import org.kde.quickcharts 1.0 as Charts
+import org.kde.quickcharts.controls 1.0 as ChartsControls
+
+Faces.SensorFace {
+    id: root
+
+    // Arbitrary minimumWidth to make easier to align plasmoids in a predictable way
+    Layout.minimumWidth: Kirigami.Units.gridUnit * 8
+    Layout.preferredWidth: titleMetrics.width
+
+    contentItem: ColumnLayout {
+        spacing: Kirigami.Units.smallspacing
+
+        Kirigami.Heading {
+            id: heading
+            Layout.fillWidth: true
+            horizontalAlignment: Text.AlignHCenter
+            elide: Text.ElideRight
+            text: root.controller.title
+            visible: text.length > 0
+            level: 2
+            TextMetrics {
+                id: titleMetrics
+                font: heading.font
+                text: heading.text
+            }
+        }
+
+        Item { Layout.fillWidth: true; Layout.fillHeight: true }
+
+        Repeater {
+            model: root.controller.highPrioritySensorIds
+
+            ColumnLayout {
+                Layout.fillWidth: true
+                Layout.bottomMargin: Kirigami.Units.smallSpacing
+                spacing: 0
+                Bar {
+                    sensor: sensor
+                }
+                ChartsControls.LegendDelegate {
+                    readonly property bool isTextOnly: index >= root.controller.highPrioritySensorIds.length
+
+                    Layout.fillWidth: true
+                    Layout.minimumHeight: isTextOnly ? 0 : implicitHeight
+
+                    name: sensor.shortName
+                    value: sensor.formattedValue
+                    colorVisible: false
+
+                    layoutWidth: root.width
+                    valueWidth: Kirigami.Units.gridUnit * 2
+
+                    Sensors.Sensor {
+                        id: sensor
+                        sensorId: modelData
+                    }
+                }
+            }
+        }
+        Kirigami.Separator {
+            Layout.fillWidth: true
+            visible: root.controller.lowPrioritySensorIds.length > 0
+        }
+        Repeater {
+            model: root.controller.lowPrioritySensorIds
+            ChartsControls.LegendDelegate {
+
+                Layout.fillWidth: true
+                Layout.minimumHeight: implicitHeight
+
+                name: sensor.shortName
+                value: sensor.formattedValue
+                colorVisible: false
+
+                layoutWidth: root.width
+                valueWidth: Kirigami.Units.gridUnit * 2
+
+                Sensors.Sensor {
+                    id: sensor
+                    sensorId: modelData
+                }
+            }
+        }
+
+
+        Item { Layout.fillWidth: true; Layout.fillHeight: true }
+    }
+}
